data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1547.wast
;; 8. **Test Description**: Utilize an `if` block to determine entry into a `loop`, where the `then` block contains deep nesting of `if` conditions with multiple unresolved branches (unmatched labels or stack state).    **Constraint Checked**: Confirms the correct nesting and branching behavior under deep nested conditions.    **Relation to Infinite Loops**: Unresolved branches or incorrect nesting could result in the loop failing to terminate properly, running indefinitely.

(assert_invalid
  (module (func $nested-ifs-with-branch (result i32)
    (i32.const 1)
    (if (result i32) 
      (then 
        (i32.const 1)
        (if (result i32)
          (then
            (i32.const 2)
            (if (result i32)
              (then 
                (loop (result i32)
                  (if (result i32)
                    (then (br 1)) ;; Incorrect depth, should cause validation failure
                    (else (i32.const 3))
                  )
                  (i32.const 4)
                )
              )
              (else (i32.const 5))
            )
          )
          (else (i32.const 6))
        )
      )
      (else (i32.const 7))
    )
  ))
  "type mismatch or invalid branch depth"
)